# client-server

./: .clang-format  .gitignore  docker-compose.yml  readme.md
client/: .clang-format  .dockerignore  CMakeLists.txt  CMakePresets.json  Dockerfile  client.cpp  client.hpp  common.hpp  config.json  config_docker.json  config_old.json  main_client.cpp
client/include/: client.hpp  common.hpp
client/src/: client.cpp  main_client.cpp
server/: .dockerignore  CMakeLists.txt  CMakePresets.json  Dockerfile  chat_history.db-shm  chat_history.db-wal  common.hpp  config.json  main_server.cpp  server.cpp  server.hpp
server/include/: common.hpp  server.hpp
server/src/: main_server.cpp  server.cpp
